--- a/_posts/2021-12-01-DSU해커톤.md
+++ b/_posts/2021-12-01-DSU해커톤.md
@@ -2,6 +2,28 @@
 layout: post
 title: 2021년도 동서인 AISW 해커톤 경진대회 장려상
 date: 2021-11-10 17:18:23 +0900
-category: Award
+category: Activity
 ---
-2021.11.05 ~ 2021.11.06
+2021.11.05 ~ 2021.11.06  
+&nbsp;  
+11월 05일 부터 06일 까지 이틀 간 동서대학교 소프트웨어중심대학 주관 해커톤 대회가 진행되었다.  
+해커톤 진행 이틀 전, 대회에서 개발을 진행할 아이디어를 정하는 회의를 가졌다. 단 시간에  
+개발을 할 수 있을 만한 아이디어를 정하지 못하여 난항을 겪었으나 Multi-Armed Bandit(MAB)  
+알고리즘을 연구하고 있던 팀장의 의견으로 해당 알고리즘을 활용한 소프트웨어를 개발하기로 하였다.  
+&nbsp;  
+그러나 팀장을 제외하고 나를 포함한 3명의 팀원은 MAB 알고리즘에 대해 알지 못하였기 때문에  
+아이디어를 도출하기가 쉽지 않았다. 4시간 동안 서로의 의견을 취합하고 간략하게 MAB에 대한  
+설명을 전달받은 후 우리 팀은 **전기차 전비 계산** 이라는 주제로 해커톤에 참여하게 되었다.  
+전기차는 가솔린차와 다르게 급정거 시 전비(가솔린의 연비 개념)가 상승하는 특이점이 있어  
+고속도로보다는 일반 도심 주행에서 전비가 상승한다. 때문에 적절한 속도를 유지하여 사용자의  
+불쾌지수를 낮추고 전비를 상승시키는 목적을 달성하기 위해 MAB 알고리즘을 선택했다.  
+&nbsp;  
+대회 당일, 나는 UI부분을 맡게 되었는데 모델 개발에 문제가 생겨 작업은 난항을 겪었다.  
+MAB 알고리즘에 맞는 적절한 변수를 찾아 연결시켜야 하는데 우리가 회의를 통해 설정했던  
+속도, 전비, 불쾌지수 3가지의 변수가 MAB에 제대로 매칭되지 않았던 탓인지 만족스러운 결과를  
+얻지 못했다. 때문에 개발은 밤새도록 이어졌고 팀원 모두 잠에 들지 못하고 힘든 시간을 보냈다.  
+개발 작업은 아침이 되어서야 마무리되었고 내가 맡았던 UI는 적용시키지 못한 채 마무리했다.  
+대회 결과 장려상을 받게 되어 기쁜 마음도 있었지만 완전한 결과물을 만들지 못했고 내가 맡게 된  
+UI를 적용시키지 못해 나에게서 기술적으로 부족한 점을 여실히 느껴 아쉬움이 많았던 경험이었다.  
+&nbsp;  
+![DSU해커톤](/images/dsu해커톤.jpg)
