--- a/_posts/2021-12-01-DSU해커톤.md
+++ b/_posts/2021-12-01-DSU해커톤.md
@@ -13,7 +13,7 @@ category: Activity
 &nbsp;  
 그러나 팀장을 제외하고 나를 포함한 3명의 팀원은 MAB 알고리즘에 대해 알지 못하였기 때문에  
 아이디어를 도출하기가 쉽지 않았다. 4시간 동안 서로의 의견을 취합하고 간략하게 MAB에 대한  
-설명을 전달받은 후 우리 팀은 **전기차 전비 계산** 이라는 주제로 해커톤에 참여하게 되었다.  
+설명을 전달받은 후 우리 팀은 **_전기차 전비 계산_** 이라는 주제로 해커톤에 참여하게 되었다.  
 전기차는 가솔린차와 다르게 급정거 시 전비(가솔린의 연비 개념)가 상승하는 특이점이 있어  
 고속도로보다는 일반 도심 주행에서 전비가 상승한다. 때문에 적절한 속도를 유지하여 사용자의  
 불쾌지수를 낮추고 전비를 상승시키는 목적을 달성하기 위해 MAB 알고리즘을 선택했다.  
