--- a/_posts/2021-11-22-창업노마드.md
+++ b/_posts/2021-11-22-창업노마드.md
@@ -14,7 +14,7 @@ category: Activity
 여러 학과에서 많은 인원들이 모이다 보니,의견 취합이 쉽지 않았고 주제도 당일에 알려준 터라 초기 아이디어    
 도출 과정이 원활하지 못했던 문제가 있었으나 환경 문제 개선으로 큰 주제를 잡고 각자 아이디어를 서치할 계획을     
 잡으니 여러 과가 함께 모인 점이 큰 이점으로 다가왔다. 결국 우리 조는 제주도라는 지역적 특색을 살려  
-**귤껍질을 활용한 코스메틱**이라는 주제로 좀 더 구체적인 아이디어 도출 작업을 실행했다.  
+**_귤껍질을 활용한 코스메틱_**이라는 주제로 좀 더 구체적인 아이디어 도출 작업을 실행했다.  
 &nbsp;  
 나는 자료 조사를 맡아 통계 자료를 찾아보며 버려지는 귤껍질의 양과 이를 활용하면 생기는 환경적 이점과    
 우리나라가 강점을 가진 코스메틱이라는 분야와 연결하여 다양한 상품을 만들 수 있다는 사업성을 강조하여 자료를    
