--- a/_posts/2022-11-18-CRMO.md
+++ b/_posts/2022-11-18-CRMO.md
@@ -4,3 +4,6 @@ title: 다중 객체 감지를 활용한 재활용품 분류
 date: 2022-06-08 14:30:23 +0900
 category: Project
 ---
+
+**[Tensorflow Object Detection API Fine-tunning](https://kimtaemin66.github.io/tensorflow/2022/06/08/Tensroflow-API-Fine-tuning.html)**  
+**[다중 객체 감지를 활용한 재활용품 분류 GIT](https://github.com/kimtaemin66/CRMO)**
