--- a/_posts/2022-11-18-CRMO.md
+++ b/_posts/2022-11-18-CRMO.md
@@ -5,7 +5,7 @@ date: 2022-11-18 14:30:23 +0900
 category: Project
 ---
 &nbsp;  
-**[Tensorflow Object Detection API Fine-tunning](https://kimtaemin66.github.io/tensorflow/2022/06/08/Tensroflow-API-Fine-tuning.html) 을 활용한 재활용품 분류 커스텀 모델 제작**  
+**[Tensorflow Object Detection API Transfer Learning](https://kimtaemin66.github.io/tensorflow/2022/06/08/Tensroflow-API-Fine-tuning.html) 을 활용한 재활용품 분류 커스텀 모델 제작**  
 &nbsp;  
 ![1](/images/project/CRMO/001.png)  
 ![2](/images/project/CRMO/002.png)
