--- a/_posts/2022-11-18-CRMO.md
+++ b/_posts/2022-11-18-CRMO.md
@@ -11,6 +11,6 @@ category: Project
 ![2](/images/project/CRMO/002.png)
 ![3](/images/project/CRMO/003.png)
 ![4](/images/project/CRMO/004.png)
-![5](/images/project/CRMO/005.png)
-
+![5](/images/project/CRMO/005.png)  
+![6](/images/project/CRMO/opencv.gif)
 
