--- a/_posts/2022-09-01-DACON.md
+++ b/_posts/2022-09-01-DACON.md
@@ -84,5 +84,15 @@ submission.to_csv("baseline.csv", index = False)"""
 
 print("정확도 : {0: .4f}".format(accuracy_score(Y_test,lgbm_pred)))
 ```
+&nbsp;  
+LGBM을 활용하여 모델을 개발했을 때 정확도는 82% 였다.  
+대회에서 제공한 baseline code를 활용한 모델의 정확도는 80%였다.  
+눈에 띄는 정확도의 상승이 없었기 때문에 train.csv 내의 속성의 개수를 늘리거나  
+중요도가 낮은, 비어있는 값이 포함되어있는 속성을 지우거나 결측치 대치,  
+하이퍼파라미터 조정 등 여러 방면으로 시도해보았으나 눈에 띄는 상승은 없었다.  
+예선 대회 종료 직전 nerdiness 값이 0과 1이 아닌 소수점 단위의 확률로  
+나와야 한다는 것을 깨닫게 되었다. 0(아니다)과 1(그렇다)의 이분법적인 사고가  
+아닌 0에 가까운 값, 1에 가까운 값 등 확률로 나와야 한다는 것을 늦게 깨닫게 돼서  
+굉장히 아쉬움이 컸던 대회였다.  
 
 
